# Marketing-Analytics

./: .gitignore  Churn_prediction.ipynb  README.md  pyproject.toml
data_02/: reviews.csv  reviews_labelled.csv
notebooks/: 01_read_data.ipynb  02_data_analysis.ipynb  03_RFM_analysis.ipynb  03_sentiment_analysis.ipynb  04_Churn_prediction.ipynb  05_Sentiment_analysis.ipynb  churn_prediction_model.pkl  rfm_segments.csv
src/unimib_snowit_project/: utils.py
