[project]
name = "unimib_snowit_project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gcollini", email = "giovanni.collini@unimib.it"},
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "dill>=0.4.0"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

